--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "express": "~4.11.x",
     "kerberos": "~0.0.x",
     "parse": "~1.8.0",
+    "parse-dashboard": "~1.0.8",
     "parse-server": "*",
-    "parse-dashboard": "~1.0.8"
+    "parse-server-gcs-adapter": "^1.1.1"
   },
   "scripts": {
     "start": "node index.js"
